--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on : [push, pull_request]
 
 jobs:
   build:
-    runs-on: ${{ mattrix.os }}
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: ['ubuntu-jammy']
